tools/tests/ui/fail/l1073.cnf
// Test file for error code: L1073
// Expected error: Overflow IMAGE-JPG character in instruction sequence -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
